1.4.7 (2015-04-14)
==================

- The JSONP renderer created JavaScript code in such a way that a callback
  variable could be used to arbitrarily inject javascript into the response
  object.  https://github.com/Pylons/pyramid/pull/1626

1.4.6 (2014-05-31)
==================

Bug Fixes
---------

- Allow ``config.add_route_predicate`` and ``config.add_view_predicate`` to
  accept an importable dotted-string for the ``factory`` argument.

- Fix an exception in ``package_name()`` when resolving the package
  name for namespace packages.

1.4.5 (2013-08-30)
==================

Bug Fixes
---------

- The ``alchemy`` scaffold would break when the database was MySQL during
  tables creation.  See https://github.com/Pylons/pyramid/pull/1049.  Backport 
  from master.

- It was not possible to use ``pyramid.httpexceptions.HTTPException`` as
  the ``context`` of an exception view as very general catchall for
  http-related exceptions when you wanted that exception view to override the 
  default exception view. See https://github.com/Pylons/pyramid/issues/985.
  Backport from master.

- When the ``pyramid.reload_templates`` setting was true, and a Chameleon 
  template was reloaded, and the renderer specification named a macro 
  (e.g. ``foo#macroname.pt``), renderings of the template after the template
  was reloaded due to a file change would produce the entire template body 
  instead of just a rendering of the macro.  See 
  https://github.com/Pylons/pyramid/issues/1013.  Backport from master.

- Fixed a Mako renderer bug returning a tuple with a previous defname value
  in some circumstances. See https://github.com/Pylons/pyramid/issues/1037 for
  more information.  Backport from master.

- Make ``pserve.cherrypy_server_runner`` Python 3 compatible. See
  https://github.com/Pylons/pyramid/issues/718.  Backport from master.

1.4.4 (2013-08-27)
==================

Bug Fixes
---------

- Fix an obscure problem when combining a virtual root with a route with a 